# aiven-cloud-platforms

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  conftest.py  pyproject.toml
backend/src/: cloud_platforms_business.py  cloud_platforms_model.py  cloud_platforms_repository.py  cloud_platforms_service.py  config.py  server.py
backend/tests/: test_cloud_platforms_business.py  test_cloud_platforms_repository.py  test_cloud_platforms_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  setupTests.ts  types.ts
frontend/src/components/: App.tsx  CloudPlatformList.tsx  CloudPlatforms.tsx  DebouncedSlider.tsx  Filters.tsx
frontend/src/components/__tests__/: App.spec.tsx  CloudPlatformList.spec.tsx  DebouncedSlider.spec.tsx  Filters.spec.tsx
frontend/src/hooks/: useCloudPlatforms.ts  useUserLocation.ts
frontend/src/hooks/__tests__/: useCloudPlatforms.spec.ts
