[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jorge Florian <jafn28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
requests = "^2.26.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi-utils = "^0.2.1"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
types-requests = "^2.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
